--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="com.android.vending.BILLING" />
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <uses-feature
         android:name="android.hardware.nfc"
@@ -45,16 +46,20 @@
         <activity
             android:name=".activities.SplashActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar" />
-
         <activity android:name=".activities.NfcActivity" />
+        <activity android:name=".activities.FingerprintActivity" />
+        <activity android:name=".activities.TutorialActivity">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-        <activity android:name=".activities.FingerprintActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+        <activity android:name=".activities.PickFromContacts" />
+        <activity android:name=".activities.StripeActivity" />
+
+        <activity android:name=".activities.CreditCardFormActivity" />
     </application>
 
 </manifest>
